tests/good/tc5015-multiple_escape_characters_and_lines.vtt
WEBVTT

00:11.000 --> 00:15.000
&nbsp;
&nbsp;