tests/bad/tc5303-ruby_missing_base_text.vtt
WEBVTT

00:11.000 --> 00:13.000
Hey <ruby><rt>World Wide Web</rt></ruby>